--- a/react-portofolio-website-1/package.json
+++ b/react-portofolio-website-1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portofolio-website-1",
+  "name": "react-porto",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
