--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "REACT-PORTOFOLIO-WEBSITE-1",
+  "name": "REACT PORTFOLIO",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
