--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "CI='' craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
